testdata/baselines/reference/submodule/conformance/jsdocSignatureOnReturnedFunction.errors.txt
jsdocSignatureOnReturnedFunction.js(3,16): error TS8010: Type annotations can only be used in TypeScript files.
jsdocSignatureOnReturnedFunction.js(4,16): error TS8010: Type annotations can only be used in TypeScript files.
jsdocSignatureOnReturnedFunction.js(5,18): error TS8010: Type annotations can only be used in TypeScript files.
jsdocSignatureOnReturnedFunction.js(14,16): error TS8010: Type annotations can only be used in TypeScript files.
jsdocSignatureOnReturnedFunction.js(15,16): error TS8010: Type annotations can only be used in TypeScript files.
jsdocSignatureOnReturnedFunction.js(16,18): error TS8010: Type annotations can only be used in TypeScript files.
jsdocSignatureOnReturnedFunction.js(24,16): error TS8016: Type assertion expressions can only be used in TypeScript files.
jsdocSignatureOnReturnedFunction.js(31,16): error TS8016: Type assertion expressions can only be used in TypeScript files.


==== jsdocSignatureOnReturnedFunction.js (8 errors) ====
    function f1() {
        /**
         * @param {number} a
                   ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
         * @param {number} b
                   ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
         * @returns {number}
                     ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
         */
        return (a, b) => {
            return a + b;
        }
    }
    
    function f2() {
        /**
         * @param {number} a
                   ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
         * @param {number} b
                   ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
         * @returns {number}
                     ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
         */
        return function (a, b){
            return a + b;
        }
    }
    
    function f3() {
        /** @type {(a: number, b: number) => number} */
                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8016: Type assertion expressions can only be used in TypeScript files.
        return (a, b) => {
            return a + b;
        }
    }
    
    function f4() {
        /** @type {(a: number, b: number) => number} */
                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8016: Type assertion expressions can only be used in TypeScript files.
        return function (a, b){
            return a + b;
        }
    }
    